--- a/Sandra.UI/Sandra.UI.csproj
+++ b/Sandra.UI/Sandra.UI.csproj
@@ -112,6 +112,7 @@
       <DependentUpon>MovesTextBox.cs</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="PGNSyntaxDescriptor.cs" />
     <Compile Include="PlayingBoard.cs">
       <SubType>Component</SubType>
     </Compile>
