--- a/Eutherion/Win/Eutherion.Win.csproj
+++ b/Eutherion/Win/Eutherion.Win.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Storage\PType.Base.cs" />
     <Compile Include="Storage\PType.Common.cs" />
     <Compile Include="Storage\PType.cs" />
+    <Compile Include="Storage\PType.List.cs" />
     <Compile Include="Storage\PTypeError.cs" />
     <Compile Include="Storage\PTypeErrorBuilder.cs" />
     <Compile Include="Storage\PValue.cs" />
