--- a/Eutherion/Win/Eutherion.Win.csproj
+++ b/Eutherion/Win/Eutherion.Win.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Storage\PType.Common.cs" />
     <Compile Include="Storage\PType.cs" />
     <Compile Include="Storage\PType.List.cs" />
+    <Compile Include="Storage\PType.Map.cs" />
     <Compile Include="Storage\PTypeError.cs" />
     <Compile Include="Storage\PTypeErrorBuilder.cs" />
     <Compile Include="Storage\PValue.cs" />
