Move JsonMapNodeKeyValuePair to its own file, promote it to a class, rename it to JsonKeyValueSyntax.

--- a/Eutherion/Shared/Eutherion.Shared.csproj
+++ b/Eutherion/Shared/Eutherion.Shared.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Text\Json\JsonErrorInfo.cs" />
     <Compile Include="Text\Json\JsonErrorString.cs" />
     <Compile Include="Text\Json\JsonIntegerLiteralSyntax.cs" />
+    <Compile Include="Text\Json\JsonKeyValueSyntax.cs" />
     <Compile Include="Text\Json\JsonListSyntax.cs" />
     <Compile Include="Text\Json\JsonMapSyntax.cs" />
     <Compile Include="Text\Json\JsonMissingValueSyntax.cs" />
