Use JsonSymbolEnumerator to enumerate all JsonSymbols in the parse tree for syntax highlighting. Also saves overhead because the result of the JsonTokenizer is not stored directly in memory anymore, but passed directly as an IEnumerable to JsonParser.

--- a/Eutherion/Shared/Eutherion.Shared.csproj
+++ b/Eutherion/Shared/Eutherion.Shared.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Text\Json\JsonString.cs" />
     <Compile Include="Text\Json\JsonStringLiteralSyntax.cs" />
     <Compile Include="Text\Json\JsonSymbol.cs" />
+    <Compile Include="Text\Json\JsonSymbolEnumerator.cs" />
     <Compile Include="Text\Json\JsonSymbolVisitor.cs" />
     <Compile Include="Text\Json\JsonTokenizer.cs" />
     <Compile Include="Text\Json\JsonUndefinedValueSyntax.cs" />
