--- a/Eutherion/Shared/Eutherion.Shared.csproj
+++ b/Eutherion/Shared/Eutherion.Shared.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Text\Json\JsonSymbol.cs" />
     <Compile Include="Text\Json\JsonSymbolEnumerator.cs" />
     <Compile Include="Text\Json\JsonSymbolVisitor.cs" />
+    <Compile Include="Text\Json\JsonSyntax.cs" />
     <Compile Include="Text\Json\JsonTokenizer.cs" />
     <Compile Include="Text\Json\JsonUndefinedValueSyntax.cs" />
     <Compile Include="Text\Json\JsonUnknownSymbol.cs" />
