Rename six 'red' classes that map directly onto JsonSymbol descendants by suffixing them with 'Syntax'. Move them to their own files.

--- a/Eutherion/Shared/Eutherion.Shared.csproj
+++ b/Eutherion/Shared/Eutherion.Shared.csproj
@@ -46,10 +46,14 @@
     <Compile Include="Text\Json\JsonBackgroundSyntax.cs" />
     <Compile Include="Text\Json\JsonBooleanLiteralSyntax.cs" />
     <Compile Include="Text\Json\JsonColon.cs" />
+    <Compile Include="Text\Json\JsonColonSyntax.cs" />
     <Compile Include="Text\Json\JsonComma.cs" />
+    <Compile Include="Text\Json\JsonCommaSyntax.cs" />
     <Compile Include="Text\Json\JsonComment.cs" />
     <Compile Include="Text\Json\JsonCurlyClose.cs" />
+    <Compile Include="Text\Json\JsonCurlyCloseSyntax.cs" />
     <Compile Include="Text\Json\JsonCurlyOpen.cs" />
+    <Compile Include="Text\Json\JsonCurlyOpenSyntax.cs" />
     <Compile Include="Text\Json\JsonErrorCode.cs" />
     <Compile Include="Text\Json\JsonErrorInfo.cs" />
     <Compile Include="Text\Json\JsonErrorString.cs" />
@@ -61,7 +65,9 @@
     <Compile Include="Text\Json\JsonMultiValueSyntax.cs" />
     <Compile Include="Text\Json\JsonParser.cs" />
     <Compile Include="Text\Json\JsonSquareBracketClose.cs" />
+    <Compile Include="Text\Json\JsonSquareBracketCloseSyntax.cs" />
     <Compile Include="Text\Json\JsonSquareBracketOpen.cs" />
+    <Compile Include="Text\Json\JsonSquareBracketOpenSyntax.cs" />
     <Compile Include="Text\Json\JsonString.cs" />
     <Compile Include="Text\Json\JsonStringLiteralSyntax.cs" />
     <Compile Include="Text\Json\JsonSymbol.cs" />
