--- a/Eutherion/Shared/Eutherion.Shared.csproj
+++ b/Eutherion/Shared/Eutherion.Shared.csproj
@@ -38,10 +38,14 @@
     <Reference Include="System.Numerics" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Box.cs" />
     <Compile Include="LinqExtensions.cs" />
     <Compile Include="Localization\LocalizedStringKey.cs" />
     <Compile Include="Localization\Localizer.cs" />
+    <Compile Include="Maybe.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SafeLazy.cs" />
+    <Compile Include="SafeLazyObject.cs" />
     <Compile Include="Text\ISpan.cs" />
     <Compile Include="Text\Json\JsonBackgroundSyntax.cs" />
     <Compile Include="Text\Json\JsonBooleanLiteralSyntax.cs" />
@@ -96,26 +100,22 @@
     <Compile Include="UIActions\UIActionBinding.cs" />
     <Compile Include="UIActions\UIActionHandler.cs" />
     <Compile Include="UIActions\UIActionHandlerFunc.cs" />
+    <Compile Include="Union.cs" />
     <Compile Include="UtilityExtensions.cs" />
-    <Compile Include="Utils\Box.cs" />
     <Compile Include="Utils\CircularBuffer.cs" />
     <Compile Include="Utils\EnumHelper.cs" />
     <Compile Include="Utils\EnumIndexedArray.cs" />
     <Compile Include="Utils\FileUtilities.cs" />
     <Compile Include="Utils\HandlerIsAnonymousException.cs" />
     <Compile Include="Utils\ImplementationSet.cs" />
-    <Compile Include="Utils\Maybe.cs" />
     <Compile Include="Utils\ObservableValue.cs" />
     <Compile Include="Utils\ReadOnlyList.cs" />
-    <Compile Include="Utils\SafeLazy.cs" />
-    <Compile Include="Utils\SafeLazyObject.cs" />
     <Compile Include="Utils\SafeLazyObjectCollection.cs" />
     <Compile Include="Utils\SpecializedEnumerable.cs" />
     <Compile Include="Utils\StringUtilities.cs" />
-    <Compile Include="Utils\Union.cs" />
     <Compile Include="Utils\WeakEvent.cs" />
     <Compile Include="Utils\WeakEventInvocationException.cs" />
-    <Compile Include="Utils\_void.cs" />
+    <Compile Include="_void.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
