Auto-generate Union class code in debug mode.

--- a/Eutherion/Shared/Eutherion.Shared.csproj
+++ b/Eutherion/Shared/Eutherion.Shared.csproj
@@ -101,6 +101,7 @@
     <Compile Include="UIActions\UIActionHandler.cs" />
     <Compile Include="UIActions\UIActionHandlerFunc.cs" />
     <Compile Include="Union.cs" />
+    <Compile Include="Union.Generate.cs" />
     <Compile Include="UtilityExtensions.cs" />
     <Compile Include="Utils\CircularBuffer.cs" />
     <Compile Include="Utils\EnumHelper.cs" />
