Rename to JsonBackgroundListSyntax.

--- a/Eutherion/Shared/Eutherion.Shared.csproj
+++ b/Eutherion/Shared/Eutherion.Shared.csproj
@@ -48,7 +48,7 @@
     <Compile Include="SafeLazyObject.cs" />
     <Compile Include="Text\ISpan.cs" />
     <Compile Include="Text\Json\IJsonSymbol.cs" />
-    <Compile Include="Text\Json\JsonBackgroundSyntax.cs" />
+    <Compile Include="Text\Json\JsonBackgroundListSyntax.cs" />
     <Compile Include="Text\Json\JsonBooleanLiteralSyntax.cs" />
     <Compile Include="Text\Json\JsonColon.cs" />
     <Compile Include="Text\Json\JsonColonSyntax.cs" />
