Apply more consistent naming scheme by suffixing types with 'Syntax'.

--- a/Eutherion/Shared/Eutherion.Shared.csproj
+++ b/Eutherion/Shared/Eutherion.Shared.csproj
@@ -53,12 +53,12 @@
     <Compile Include="Text\Json\JsonBooleanLiteralSyntax.cs" />
     <Compile Include="Text\Json\JsonColonSyntax.cs" />
     <Compile Include="Text\Json\JsonCommaSyntax.cs" />
-    <Compile Include="Text\Json\JsonComment.cs" />
+    <Compile Include="Text\Json\JsonCommentSyntax.cs" />
     <Compile Include="Text\Json\JsonCurlyCloseSyntax.cs" />
     <Compile Include="Text\Json\JsonCurlyOpenSyntax.cs" />
     <Compile Include="Text\Json\JsonErrorCode.cs" />
     <Compile Include="Text\Json\JsonErrorInfo.cs" />
-    <Compile Include="Text\Json\JsonErrorString.cs" />
+    <Compile Include="Text\Json\JsonErrorStringSyntax.cs" />
     <Compile Include="Text\Json\JsonIntegerLiteralSyntax.cs" />
     <Compile Include="Text\Json\JsonKeyValueSyntax.cs" />
     <Compile Include="Text\Json\JsonListSyntax.cs" />
@@ -74,13 +74,13 @@
     <Compile Include="Text\Json\JsonTerminalSymbolVisitor.cs" />
     <Compile Include="Text\Json\JsonTokenizer.cs" />
     <Compile Include="Text\Json\JsonUndefinedValueSyntax.cs" />
-    <Compile Include="Text\Json\JsonUnknownSymbol.cs" />
-    <Compile Include="Text\Json\JsonUnterminatedMultiLineComment.cs" />
+    <Compile Include="Text\Json\JsonUnknownSymbolSyntax.cs" />
+    <Compile Include="Text\Json\JsonUnterminatedMultiLineCommentSyntax.cs" />
     <Compile Include="Text\Json\JsonValue.cs" />
     <Compile Include="Text\Json\JsonValueSyntax.cs" />
     <Compile Include="Text\Json\JsonValueSyntaxVisitor.cs" />
     <Compile Include="Text\Json\JsonValueWithBackgroundSyntax.cs" />
-    <Compile Include="Text\Json\JsonWhitespace.cs" />
+    <Compile Include="Text\Json\JsonWhitespaceSyntax.cs" />
     <Compile Include="Text\Json\RootJsonSyntax.cs" />
     <Compile Include="Text\ReadOnlySeparatedSpanList.cs" />
     <Compile Include="Text\ReadOnlySpanList.cs" />
