--- a/Sandra.Chess/Sandra.Chess.csproj
+++ b/Sandra.Chess/Sandra.Chess.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Pgn\PgnBackgroundSyntax.cs" />
     <Compile Include="Pgn\PgnErrorCode.cs" />
     <Compile Include="Pgn\PgnErrorInfo.cs" />
+    <Compile Include="Pgn\PgnIllegalCharacterSyntax.cs" />
     <Compile Include="Pgn\PgnSyntaxDeprecated.cs" />
     <Compile Include="Pgn\PgnTokenizer.cs" />
     <Compile Include="Pgn\PgnWhitespaceSyntax.cs" />
