--- a/Sandra.Chess/Sandra.Chess.csproj
+++ b/Sandra.Chess/Sandra.Chess.csproj
@@ -46,6 +46,7 @@
     <Compile Include="MoveFormatter.cs" />
     <Compile Include="Pgn\IPgnSymbol.cs" />
     <Compile Include="Pgn\PgnBackgroundSyntax.cs" />
+    <Compile Include="Pgn\PgnBackgroundSyntaxVisitor.cs" />
     <Compile Include="Pgn\PgnErrorCode.cs" />
     <Compile Include="Pgn\PgnErrorInfo.cs" />
     <Compile Include="Pgn\PgnIllegalCharacterSyntax.cs" />
