Apply syntax highlighting for PgnIllegalCharacterSyntax nodes.

--- a/Sandra.UI/Sandra.UI.csproj
+++ b/Sandra.UI/Sandra.UI.csproj
@@ -119,6 +119,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="PgnErrorInfoExtensions.cs" />
+    <Compile Include="PgnStyleSelector.cs" />
     <Compile Include="PgnSyntaxDescriptor.cs" />
     <Compile Include="PlayingBoard.cs">
       <SubType>Component</SubType>
