--- a/Eutherion/Shared/Eutherion.Shared.csproj
+++ b/Eutherion/Shared/Eutherion.Shared.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Text\Json\IJsonSymbol.cs" />
     <Compile Include="Text\Json\JsonBackgroundListSyntax.cs" />
     <Compile Include="Text\Json\JsonBackgroundSyntax.cs" />
+    <Compile Include="Text\Json\JsonBackgroundSyntaxVisitor.cs" />
     <Compile Include="Text\Json\JsonBooleanLiteralSyntax.cs" />
     <Compile Include="Text\Json\JsonColonSyntax.cs" />
     <Compile Include="Text\Json\JsonCommaSyntax.cs" />
