--- a/Sandra.UI/Sandra.UI.csproj
+++ b/Sandra.UI/Sandra.UI.csproj
@@ -161,28 +161,33 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <None Include="Properties\flip.png" />
+    <None Include="AppTemplate\close.png" />
+    <None Include="AppTemplate\close_white.png" />
     <None Include="AppTemplate\copy.png" />
     <None Include="AppTemplate\cut.png" />
+    <None Include="AppTemplate\demaximize.png" />
+    <None Include="AppTemplate\demaximize_white.png" />
+    <None Include="AppTemplate\globe.png" />
+    <None Include="AppTemplate\maximize.png" />
+    <None Include="AppTemplate\maximize_white.png" />
+    <None Include="AppTemplate\minimize.png" />
+    <None Include="AppTemplate\minimize_white.png" />
     <None Include="AppTemplate\paste.png" />
     <None Include="AppTemplate\redo.png" />
+    <None Include="AppTemplate\save.png" />
+    <None Include="AppTemplate\save_white.png" />
+    <None Include="AppTemplate\settings.png" />
+    <None Include="AppTemplate\speech.png" />
     <None Include="AppTemplate\undo.png" />
     <None Include="AppTemplate\zoom_in.png" />
     <None Include="AppTemplate\zoom_out.png" />
-    <None Include="AppTemplate\settings.png" />
-    <None Include="AppTemplate\speech.png" />
-    <None Include="AppTemplate\globe.png" />
-    <None Include="AppTemplate\save.png" />
-    <None Include="AppTemplate\minimize.png" />
-    <None Include="AppTemplate\maximize.png" />
-    <None Include="AppTemplate\demaximize.png" />
-    <None Include="AppTemplate\close.png" />
     <None Include="Properties\bb.png" />
     <None Include="Properties\bk.png" />
     <None Include="Properties\bn.png" />
     <None Include="Properties\bp.png" />
     <None Include="Properties\bq.png" />
     <None Include="Properties\br.png" />
+    <None Include="Properties\flip.png" />
     <None Include="Properties\wb.png" />
     <None Include="Properties\wk.png" />
     <None Include="Properties\wn.png" />
