--- a/Sandra.Chess/Sandra.Chess.csproj
+++ b/Sandra.Chess/Sandra.Chess.csproj
@@ -45,20 +45,28 @@
     <Compile Include="Move.cs" />
     <Compile Include="MoveFormatter.cs" />
     <Compile Include="Pgn\IPgnSymbol.cs" />
+    <Compile Include="Pgn\PgnAsteriskSyntax.cs" />
     <Compile Include="Pgn\PgnBackgroundSyntax.cs" />
     <Compile Include="Pgn\PgnBackgroundSyntaxVisitor.cs" />
-    <Compile Include="Pgn\PgnBracketEndSyntax.cs" />
-    <Compile Include="Pgn\PgnBracketStartSyntax.cs" />
+    <Compile Include="Pgn\PgnBracketCloseSyntax.cs" />
+    <Compile Include="Pgn\PgnBracketOpenSyntax.cs" />
     <Compile Include="Pgn\PgnErrorCode.cs" />
     <Compile Include="Pgn\PgnErrorInfo.cs" />
     <Compile Include="Pgn\PgnErrorTagValueSyntax.cs" />
+    <Compile Include="Pgn\PgnEscapeSyntax.cs" />
     <Compile Include="Pgn\PgnIllegalCharacterSyntax.cs" />
+    <Compile Include="Pgn\PgnMultiLineCommentSyntax.cs" />
+    <Compile Include="Pgn\PgnParenthesisCloseSyntax.cs" />
+    <Compile Include="Pgn\PgnParenthesisOpenSyntax.cs" />
     <Compile Include="Pgn\PgnParser.cs" />
+    <Compile Include="Pgn\PgnPeriodSyntax.cs" />
+    <Compile Include="Pgn\PgnSingleLineCommentSyntax.cs" />
     <Compile Include="Pgn\PgnSymbolVisitor.cs" />
     <Compile Include="Pgn\PgnSyntax.cs" />
     <Compile Include="Pgn\PgnSyntaxDeprecated.cs" />
     <Compile Include="Pgn\PgnTagNameSyntax.cs" />
     <Compile Include="Pgn\PgnTagValueSyntax.cs" />
+    <Compile Include="Pgn\PgnUnterminatedCommentSyntax.cs" />
     <Compile Include="Pgn\PgnWhitespaceSyntax.cs" />
     <Compile Include="Pgn\RootPgnSyntax.cs" />
     <Compile Include="Position.cs" />
