Parse end-of-line comments.

--- a/Sandra.Chess/Sandra.Chess.csproj
+++ b/Sandra.Chess/Sandra.Chess.csproj
@@ -50,17 +50,16 @@
     <Compile Include="Pgn\PgnBackgroundSyntaxVisitor.cs" />
     <Compile Include="Pgn\PgnBracketCloseSyntax.cs" />
     <Compile Include="Pgn\PgnBracketOpenSyntax.cs" />
+    <Compile Include="Pgn\PgnCommentSyntax.cs" />
     <Compile Include="Pgn\PgnErrorCode.cs" />
     <Compile Include="Pgn\PgnErrorInfo.cs" />
     <Compile Include="Pgn\PgnErrorTagValueSyntax.cs" />
     <Compile Include="Pgn\PgnEscapeSyntax.cs" />
     <Compile Include="Pgn\PgnIllegalCharacterSyntax.cs" />
-    <Compile Include="Pgn\PgnMultiLineCommentSyntax.cs" />
     <Compile Include="Pgn\PgnParenthesisCloseSyntax.cs" />
     <Compile Include="Pgn\PgnParenthesisOpenSyntax.cs" />
     <Compile Include="Pgn\PgnParser.cs" />
     <Compile Include="Pgn\PgnPeriodSyntax.cs" />
-    <Compile Include="Pgn\PgnSingleLineCommentSyntax.cs" />
     <Compile Include="Pgn\PgnSymbolType.cs" />
     <Compile Include="Pgn\PgnSymbolVisitor.cs" />
     <Compile Include="Pgn\PgnSyntax.cs" />
