Add new PGN code files.

--- a/Sandra.Chess/Sandra.Chess.csproj
+++ b/Sandra.Chess/Sandra.Chess.csproj
@@ -45,29 +45,40 @@
     <Compile Include="Move.cs" />
     <Compile Include="MoveFormatter.cs" />
     <Compile Include="Pgn\IPgnSymbol.cs" />
+    <Compile Include="Pgn\PgnAnnotation.cs" />
     <Compile Include="Pgn\PgnAsteriskSyntax.cs" />
     <Compile Include="Pgn\PgnBackgroundSyntax.cs" />
     <Compile Include="Pgn\PgnBackgroundSyntaxVisitor.cs" />
+    <Compile Include="Pgn\PgnBlackWinMarkerSyntax.cs" />
     <Compile Include="Pgn\PgnBracketCloseSyntax.cs" />
     <Compile Include="Pgn\PgnBracketOpenSyntax.cs" />
     <Compile Include="Pgn\PgnCommentSyntax.cs" />
+    <Compile Include="Pgn\PgnDrawMarkerSyntax.cs" />
+    <Compile Include="Pgn\PgnEmptyNagSyntax.cs" />
     <Compile Include="Pgn\PgnErrorCode.cs" />
     <Compile Include="Pgn\PgnErrorInfo.cs" />
     <Compile Include="Pgn\PgnErrorTagValueSyntax.cs" />
     <Compile Include="Pgn\PgnEscapeSyntax.cs" />
     <Compile Include="Pgn\PgnIllegalCharacterSyntax.cs" />
+    <Compile Include="Pgn\PgnMoveNumberSyntax.cs" />
+    <Compile Include="Pgn\PgnMoveSyntax.cs" />
+    <Compile Include="Pgn\PgnNagSyntax.cs" />
+    <Compile Include="Pgn\PgnOverflowNagSyntax.cs" />
     <Compile Include="Pgn\PgnParenthesisCloseSyntax.cs" />
     <Compile Include="Pgn\PgnParenthesisOpenSyntax.cs" />
     <Compile Include="Pgn\PgnParser.cs" />
     <Compile Include="Pgn\PgnPeriodSyntax.cs" />
+    <Compile Include="Pgn\PgnSymbolStateMachine.cs" />
     <Compile Include="Pgn\PgnSymbolType.cs" />
     <Compile Include="Pgn\PgnSymbolVisitor.cs" />
     <Compile Include="Pgn\PgnSyntax.cs" />
     <Compile Include="Pgn\PgnSyntaxDeprecated.cs" />
     <Compile Include="Pgn\PgnTagNameSyntax.cs" />
     <Compile Include="Pgn\PgnTagValueSyntax.cs" />
+    <Compile Include="Pgn\PgnUnknownSymbolSyntax.cs" />
     <Compile Include="Pgn\PgnUnterminatedCommentSyntax.cs" />
     <Compile Include="Pgn\PgnWhitespaceSyntax.cs" />
+    <Compile Include="Pgn\PgnWhiteWinMarkerSyntax.cs" />
     <Compile Include="Pgn\RootPgnSyntax.cs" />
     <Compile Include="Position.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
