--- a/Sandra.Chess/Sandra.Chess.csproj
+++ b/Sandra.Chess/Sandra.Chess.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Pgn\IPgnSymbol.cs" />
     <Compile Include="Pgn\PgnAnnotation.cs" />
     <Compile Include="Pgn\PgnAsteriskSyntax.cs" />
+    <Compile Include="Pgn\PgnBackgroundListSyntax.cs" />
     <Compile Include="Pgn\PgnBackgroundSyntax.cs" />
     <Compile Include="Pgn\PgnBackgroundSyntaxVisitor.cs" />
     <Compile Include="Pgn\PgnBlackWinMarkerSyntax.cs" />
