Add framework to test PGN parse trees with a single test.

--- a/Sandra.Chess/Tests/Sandra.Chess.Tests.csproj
+++ b/Sandra.Chess/Tests/Sandra.Chess.Tests.csproj
@@ -63,6 +63,7 @@
     </When>
   </Choose>
   <ItemGroup>
+    <Compile Include="ParseTrees.cs" />
     <Compile Include="PgnTests.cs" />
     <Compile Include="PositionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
