Move AutoSaveFileNamePair to its own file.

--- a/Sandra.UI/Sandra.UI.csproj
+++ b/Sandra.UI/Sandra.UI.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppTemplate\AutoSaveFileNamePair.cs" />
     <Compile Include="AppTemplate\BuiltInEnglishLocalizer.cs" />
     <Compile Include="AppTemplate\CombinedUIActionInterface.cs" />
     <Compile Include="AppTemplate\FileLocalizer.cs" />
