--- a/Sandra.UI/Sandra.UI.csproj
+++ b/Sandra.UI/Sandra.UI.csproj
@@ -56,6 +56,7 @@
     <Compile Include="AppTemplate\AutoSaveFileNamePair.cs" />
     <Compile Include="AppTemplate\BuiltInEnglishLocalizer.cs" />
     <Compile Include="AppTemplate\CombinedUIActionInterface.cs" />
+    <Compile Include="AppTemplate\ErrorLevel.cs" />
     <Compile Include="AppTemplate\FileLocalizer.cs" />
     <Compile Include="AppTemplate\FormStateAutoSaver.cs" />
     <Compile Include="AppTemplate\JsonErrorInfoExtensions.cs" />
