Add PgnGameResult and PgnGameResultSyntax.

--- a/Sandra.Chess/Sandra.Chess.csproj
+++ b/Sandra.Chess/Sandra.Chess.csproj
@@ -61,6 +61,8 @@
     <Compile Include="Pgn\PgnErrorLevel.cs" />
     <Compile Include="Pgn\PgnErrorTagValueSyntax.cs" />
     <Compile Include="Pgn\PgnEscapeSyntax.cs" />
+    <Compile Include="Pgn\PgnGameResult.cs" />
+    <Compile Include="Pgn\PgnGameResultSyntax.cs" />
     <Compile Include="Pgn\PgnIllegalCharacterSyntax.cs" />
     <Compile Include="Pgn\PgnMoveFormatter.cs" />
     <Compile Include="Pgn\PgnMoveNumberSyntax.cs" />
