Organize parse tree test cases into different files.

--- a/Sandra.Chess/Tests/Sandra.Chess.Tests.csproj
+++ b/Sandra.Chess/Tests/Sandra.Chess.Tests.csproj
@@ -64,6 +64,8 @@
   </Choose>
   <ItemGroup>
     <Compile Include="ParseTrees.cs" />
+    <Compile Include="ParseTrees.TagSection.cs" />
+    <Compile Include="ParseTrees.Trivia.cs" />
     <Compile Include="PgnTests.cs" />
     <Compile Include="PositionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
