--- a/Sandra.Chess/Sandra.Chess.csproj
+++ b/Sandra.Chess/Sandra.Chess.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Pgn\PgnParserCharacterClass.cs" />
     <Compile Include="Pgn\PgnPeriodSyntax.cs" />
     <Compile Include="Pgn\PgnPlyFloatItemListSyntax.cs" />
+    <Compile Include="Pgn\PgnPlyFloatItemSyntax.cs" />
     <Compile Include="Pgn\PgnPlyListSyntax.cs" />
     <Compile Include="Pgn\PgnPlySyntax.cs" />
     <Compile Include="Pgn\PgnSymbolStateMachine.cs" />
