Add PgnOrphanParenthesisCloseSyntax which as a terminal symbol looks like PgnParenthesisCloseSyntax, but has a PgnPlyFloatItemWithTriviaSyntax parent like PgnPeriodSyntax.

--- a/Sandra.Chess/Sandra.Chess.csproj
+++ b/Sandra.Chess/Sandra.Chess.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Pgn\PgnMoveNumberSyntax.cs" />
     <Compile Include="Pgn\PgnMoveSyntax.cs" />
     <Compile Include="Pgn\PgnNagSyntax.cs" />
+    <Compile Include="Pgn\PgnOrphanParenthesisCloseSyntax.cs" />
     <Compile Include="Pgn\PgnOverflowNagSyntax.cs" />
     <Compile Include="Pgn\PgnParenthesisCloseSyntax.cs" />
     <Compile Include="Pgn\PgnParenthesisOpenSyntax.cs" />
