--- a/Sandra.Chess/Tests/Sandra.Chess.Tests.csproj
+++ b/Sandra.Chess/Tests/Sandra.Chess.Tests.csproj
@@ -64,6 +64,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="ParseTrees.cs" />
+    <Compile Include="ParseTrees.MoveTree.cs" />
     <Compile Include="ParseTrees.Ply.cs" />
     <Compile Include="ParseTrees.TagSection.cs" />
     <Compile Include="ParseTrees.Trivia.cs" />
