Return a GreenPgnGameListSyntax root syntax node from YieldEof.

--- a/Sandra.Chess/Sandra.Chess.csproj
+++ b/Sandra.Chess/Sandra.Chess.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Pgn\PgnErrorLevel.cs" />
     <Compile Include="Pgn\PgnErrorTagValueSyntax.cs" />
     <Compile Include="Pgn\PgnEscapeSyntax.cs" />
+    <Compile Include="Pgn\PgnGameListSyntax.cs" />
     <Compile Include="Pgn\PgnGameResult.cs" />
     <Compile Include="Pgn\PgnGameResultSyntax.cs" />
     <Compile Include="Pgn\PgnGameSyntax.cs" />
