--- a/Sandra.Chess/Sandra.Chess.csproj
+++ b/Sandra.Chess/Sandra.Chess.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Pgn\PgnSymbolVisitor.cs" />
     <Compile Include="Pgn\PgnSyntax.cs" />
     <Compile Include="Pgn\PgnSyntaxDeprecated.cs" />
+    <Compile Include="Pgn\PgnTagElementInMoveTreeSyntax.cs" />
     <Compile Include="Pgn\PgnTagElementSyntax.cs" />
     <Compile Include="Pgn\PgnTagElementSyntaxVisitor.cs" />
     <Compile Include="Pgn\PgnTagElementWithTriviaSyntax.cs" />
