Add constants static classes for Windows messages and related.

--- a/Eutherion/Win/Eutherion.Win.csproj
+++ b/Eutherion/Win/Eutherion.Win.csproj
@@ -65,6 +65,7 @@
     <Compile Include="ITextProvider.cs" />
     <Compile Include="LineSegment.cs" />
     <Compile Include="LiveTextFile.cs" />
+    <Compile Include="Native\Constants.cs" />
     <Compile Include="Native\NativeMethods.cs" />
     <Compile Include="Native\ResizeMode.cs" />
     <Compile Include="Native\Structures.cs" />
