--- a/Eutherion/Win/Eutherion.Win.csproj
+++ b/Eutherion/Win/Eutherion.Win.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Forms\ConstrainedMoveResizeForm.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Forms\SnapGrid.cs" />
     <Compile Include="Forms\SnappingMdiChildForm.cs">
       <SubType>Form</SubType>
     </Compile>
