--- a/Sandra.UI/Sandra.UI.csproj
+++ b/Sandra.UI/Sandra.UI.csproj
@@ -72,6 +72,7 @@
     <Compile Include="AppTemplate\MenuCaptionBarForm.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="AppTemplate\MenuCaptionBarFormStyle.cs" />
     <Compile Include="AppTemplate\RichTextBoxEx.cs">
       <SubType>Component</SubType>
     </Compile>
